<resources>
    <string name="app_name">MealBuddy</string>
    <string name="logo">MealBuddy</string>
    <string name="log_in">Log in</string>
    <string name="log_in_underline"><u>Login</u></string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_up_with_email">SIGN UP WITH EMAIL</string>
    <string name="google">Google</string>
    <string name="welcome_to_meal_buddy">Welcome to MealBuddy</string>
    <string name="discover_new_recipe_and_plan_meals">Discover new recipe and plan meals</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="discover_new_recipes_plan_your_meals">Discover new recipes, plan your meals</string>
    <string name="confirm_password">Confirm Password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Name</string>
    <string name="countries">Countries</string>
    <string name="categories">Categories</string>
    <string name="ingredients">Ingredients</string>
    <string name="daily_inspiration">Daily Inspiration</string>
    <string name="login">LOGIN</string>
    <string name="search">Search</string>
    <string name="instructions">Instructions</string>
    <string name="your_favorite_meals">Your Favorite Meals:</string>
    <string name="planned_meals_for">"Planned Meals for "</string>
    <string name="continue_as_a_guest">Continue as a Guest</string>
    <string name="no_favorite_meals_added_yet">No Favorite Meals added yet!</string>
    <string name="no_plans">No Plans!</string>
    <string name="you_may_also_like">You May Also Like:</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="youtube">Youtube</string>
    <string name="search_for_your_next_meal_by_country_category_or_ingredient">Search for your next meal by country, category, or ingredient!</string>
    <string name="or">OR</string>
</resources>