<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    android:contentDescription="@string/app_name"
    android:fillViewport="true"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primary"
        tools:context=".SignUpActivity">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/imageView"
            android:layout_width="114dp"
            android:layout_height="105dp"
            android:layout_marginTop="56dp"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:shapeAppearanceOverlay="@style/RoundedImage"
            app:srcCompat="@drawable/food"
            app:strokeColor="@color/black"
            app:strokeWidth="2dp"
            tools:ignore="MissingClass" />


        <TextView
            android:id="@+id/textView5"
            style="@style/LogoTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/josefin_sans_bold"
            android:text="@string/sign_up"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/josefin_sans"
            android:text="@string/discover_new_recipes_plan_your_meals"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <!--   Username field -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textField2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:fontFamily="@font/josefin_sans"
            android:hint="@string/username"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            app:startIconDrawable="@drawable/user_ic"
            app:startIconTint="@color/primary">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_username"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/et_shape"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <!--   Email field -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textField1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:hint="@string/email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textField2"
            app:startIconDrawable="@drawable/email_ic"
            app:startIconTint="@color/primary">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                android:inputType="textEmailAddress"
                android:background="@drawable/et_shape"
                android:fontFamily="@font/josefin_sans" />
        </com.google.android.material.textfield.TextInputLayout>


        <!--Password -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textField3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:hint="@string/password"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/primary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textField1"
            app:startIconDrawable="@drawable/lock_ic"
            app:startIconTint="@color/primary">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                android:background="@drawable/et_shape"
                android:fontFamily="@font/josefin_sans"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>


        <!--    Confirm -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textField4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:hint="@string/confirm_password"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/primary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textField3"
            app:startIconDrawable="@drawable/lock_ic"
            app:startIconTint="@color/primary">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_confirmPass"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                android:background="@drawable/et_shape"
                android:fontFamily="@font/josefin_sans"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/btn_signup"
            android:layout_width="307dp"
            android:layout_height="54dp"
            android:layout_marginTop="44dp"
            android:backgroundTint="@color/secondary"
            android:fontFamily="@font/josefin_sans_bold"
            android:text="@string/sign_up"
            android:textColor="@color/onSecondary"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textField4" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>