<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    android:contentDescription="@string/app_name"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/welcome_background"
        android:pointerIcon="arrow"
        tools:context=".WelcomeActivity">

        <View
            android:id="@+id/divider2"
            android:layout_width="0dp"
            android:layout_height="3dp"
            android:layout_marginLeft="12dp"

            android:layout_marginTop="16dp"
            android:layout_marginRight="8dp"
            android:background="@android:color/background_light"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView18"
            app:layout_constraintTop_toTopOf="@+id/textView18" />

        <Button
            android:id="@+id/btn_guest"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/onSecondary"
            android:fontFamily="@font/josefin_sans_bold"
            android:text="@string/continue_as_a_guest"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@+id/btn_google"
            app:layout_constraintStart_toStartOf="@+id/btn_google"
            app:layout_constraintTop_toBottomOf="@+id/textView6" />

        <View
            android:id="@+id/divider"
            android:layout_width="0dp"
            android:layout_height="3dp"
            android:layout_marginLeft="8dp"

            android:layout_marginTop="16dp"
            android:layout_marginRight="12dp"
            android:background="@android:color/background_light"
            app:layout_constraintEnd_toStartOf="@+id/textView18"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView18" />

        <Button
            android:id="@+id/btn_google"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="32dp"
            android:backgroundTint="@color/primaryWithOpacity"
            android:fontFamily="@font/josefin_sans_bold"
            android:text="@string/google"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:icon="@drawable/google"
            app:iconGravity="textStart"
            app:iconSize="22dp"
            app:iconTintMode="multiply"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView18" />



        <Button
            android:id="@+id/btn_emailsignup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:backgroundTint="@color/primaryWithOpacity"
            android:fontFamily="@font/josefin_sans_bold"
            android:text="@string/sign_up_with_email"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:icon="@drawable/email"
            app:iconGravity="textStart"
            app:iconSize="18dp"
            app:iconTint="@color/primary"
            app:iconTintMode="multiply"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_google" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/josefin_sans_bold"
            android:foregroundGravity="left"
            android:text="@string/welcome_to_mealbuddy"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.41" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/josefin_sans_bold"
            android:text="@string/already_have_an_account"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.364"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_emailsignup" />

        <TextView
            android:id="@+id/tv_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:autoLink="none"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/josefin_sans_bold"
            android:minHeight="48dp"
            android:text="@string/log_in_underline"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@+id/textView7"
            app:layout_constraintTop_toBottomOf="@+id/btn_emailsignup" />

        <TextView
            android:id="@+id/textView18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/josefin_sans_bold"
            android:text="OR"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/btn_google"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_guest" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>