<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".search_options.view.OptionsSearchFragment">


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="279dp"
        android:layout_height="60dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        android:hint="@string/search"
        app:layout_constraintBottom_toTopOf="@+id/chipGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:startIconDrawable="@drawable/ic_search"
        app:startIconTint="@color/primary">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_filter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/josefin_sans"
            android:inputType="textAutoComplete" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chipGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_country"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/josefin_sans_bold"
            android:shadowColor="@color/material_dynamic_neutral60"
            android:text="@string/countries"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:checkedIconEnabled="true"
            app:checkedIconVisible="true"
            app:chipBackgroundColor="@color/primary"
            app:chipSurfaceColor="@color/tertiary"
            app:rippleColor="@color/black" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_categories"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/josefin_sans_bold"
            android:shadowColor="@color/material_dynamic_neutral60"
            android:text="@string/categories"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:checkedIconEnabled="true"
            app:checkedIconVisible="true"
            app:chipBackgroundColor="@color/primary"
            app:chipSurfaceColor="@color/tertiary"
            app:rippleColor="@color/black" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_ingredient"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/josefin_sans_bold"
            android:shadowColor="@color/material_dynamic_neutral60"
            android:text="@string/ingredients"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:checkedIconEnabled="true"
            app:checkedIconVisible="true"
            app:chipBackgroundColor="@color/primary"
            app:rippleColor="@color/black" />
    </com.google.android.material.chip.ChipGroup>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_items"
        android:layout_width="wrap_content"
        android:layout_height="488dp"
        android:layout_marginTop="32dp"

        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chipGroup"
        app:layout_constraintVertical_bias="0.033"
        app:spanCount="2" />

    <ImageView
        android:id="@+id/iv_search"
        android:layout_width="390dp"
        android:layout_height="239dp"
        android:layout_marginTop="100dp"
        android:background="@drawable/et_shape"
        android:backgroundTint="@color/onPrimary"
        android:src="@drawable/choose_between"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chipGroup" />

    <TextView
        android:id="@+id/tv_search_options"
        android:layout_width="317dp"
        android:layout_height="76dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/josefin_sans_bold"
        android:text="@string/search_for_your_next_meal_by_country_category_or_ingredient"
        android:textColor="@color/onPrimary"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.465"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_search" />

</androidx.constraintlayout.widget.ConstraintLayout>
